--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Proyecto Fermin</title>
   </head>
   <body>
+    <header>
+      <img src = "src/Assets/Logotipo_UTCH.png">
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
   </body>
 </html>
