--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Proyecto Fermin</title>
   </head>
   <body>
-    <header>
-      <img src = "src/Assets/Logotipo_UTCH.png">
+    <header className="bg-green-600 text-white p-6 shadow-lg">
+      <div className="container mx-auto flex items-center gap-2">
+        <img src="src/Assets/Logotipo_UTCH.png" ></img>
+        <h1 className="text-2xl font-bold">UTCH</h1>
+        <h2 className="text-2xl font-bold">Sistema de Altas y Bajas de Maestros</h2>
+      </div>
     </header>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
